@@ -833,10 +833,9 @@ ACE_END_VERSIONED_NAMESPACE_DECL
 #endif /* ACE_UINT64_FORMAT_SPECIFIER */
 
 #if !defined (ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII)
-#  if defined (NONNATIVE_LONGDOUBLE) && \
-      defined (ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE) && \
+#  if defined (ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE) && \
               (ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE == 1)
-#       define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%#24.16G"
+#    define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%#24.16G"
 #  else
 #    if defined (__MINGW32__)
 #       define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%24.16LG"
